<resources>
    <string name="app_name">ToPWr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="departments">Wydziały</string>
    <string name="empty"/>
    <string name="search_hint">Szukaj…</string>
    <string name="home_screen_greeting">Cześć, miło Cię widzieć</string>
    <string name="days">dni</string>
    <string name="until_exam">do rozpoczęcia sesji</string>
    <string name="recently_searched">Ostatnio wyszukiwane</string>
    <string name="buildings">Budynki</string>
    <string name="map_button"><![CDATA[Mapa >]]></string>
    <string name="list"><![CDATA[Lista >]]></string>
    <string name="whats_up">Co słychać</string>
    <string name="faq">Przewodnik</string>
    <string name="science_clubs">Koła Naukowe</string>
    <string name="building_name">Budynek %1$s</string>
    <string name="data_error">Błąd wczytywania danych</string>
    <string name="Monday">Poniedziałek</string>
    <string name="Tuesday">Wtorek</string>
    <string name="Wednesday">Środę</string>
    <string name="Thursday">Czwartek</string>
    <string name="Friday">Piątek</string>
    <string name="Saturday">Sobotę</string>
    <string name="Sunday">Niedzielę</string>
    <string name="Even">w Parzysty</string>
    <string name="Even_f">w Parzystą</string>
    <string name="Odd">w Nieparzysty</string>
    <string name="Odd_f">w Nieparzystą</string>
    <string name="read_more">Czytaj dalej</string>
    <string name="main_page">Strona główna</string>
    <string name="deanery">Dziekanat:</string>
    <string name="courses_of_study">Kierunki</string>
    <string name="department_position">Politechnika Wrocławska\n%1$s</string>
    <string name="department_detail_building">Budynek %1$s </string>
    <string name="clear">Wyczyść</string>
    <string name="empty_results">Brak wyników.</string>
    <string name="loading_error">Spróbuj ponownie.</string>
    <string name="retry">Ponów</string>
    <string name="see_more">Czytaj dalej</string>
    <string name="item_image">Item image</string>
    <string name="science_club_about">O Nas</string>
    <string name="science_club_contacts">Kontakt</string>
    <string name="unknown_department">Brak danych o wydziale</string>

    <string name="about_us_title">O Nas!</string>
    <string name="about_us_content">Poznaj twórców, którzy razem stworzyli te aplikacje!</string>
    <string name="version">Version %s (%s)</string>
    <string name="all_tag_name">Wszystkie</string>
    <string name="unknown_day">w ten piękny dzień!</string>
    <string name="navigate_me">Nawiguj mnie!</string>
    <string name="cant_navigate_to_browser">Nie można przejść do przeglądarki.</string>
</resources>
