<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.faq_details.FaqDetailsFragment">


    <TextView
        android:id="@+id/backToFaq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/transparent"
        android:drawablePadding="6dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="13sp"
        app:drawableLeftCompat="@drawable/ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/faq"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backToFaq">

        <LinearLayout
            android:id="@+id/aboutUsInformationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/aboutUsImageView"
                android:layout_width="match_parent"
                android:layout_height="278dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/aboutUsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/rubik_medium"
                android:textColor="@color/faq_normal_text_color"
                tools:text="@string/about_us_title" />

            <TextView
                android:id="@+id/aboutUsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="24dp"
                android:textColor="@color/faq_normal_text_color"
                android:text="@string/about_us_content"
                tools:text="@string/about_us_content" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>