<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.home_page.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/ic_rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDay" />

            <ImageView
                android:id="@+id/imageViewThirdNumberDate"
                android:layout_width="28dp"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectanglewhite"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewEndDate"
                app:layout_constraintStart_toEndOf="@+id/imageViewSecondNumberDate"
                app:layout_constraintTop_toTopOf="@+id/imageViewEndDate" />

            <ImageView
                android:id="@+id/imageViewFirstNumberDate"
                android:layout_width="28dp"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectanglewhite"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewEndDate"
                app:layout_constraintStart_toStartOf="@+id/imageViewEndDate"
                app:layout_constraintTop_toTopOf="@+id/imageViewEndDate" />

            <ImageView
                android:id="@+id/imageViewSecondNumberDate"
                android:layout_width="28dp"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectanglewhite"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewEndDate"
                app:layout_constraintStart_toEndOf="@+id/imageViewFirstNumberDate"
                app:layout_constraintTop_toTopOf="@+id/imageViewEndDate" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubik"
                android:text="@string/home_screen_greeting"
                android:textColor="@color/lightblack"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/rubik_medium"
                android:text="w Parzysty Piątek!"
                android:textColor="@color/lightblack"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <TextView
                android:id="@+id/textViewDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/days"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@+id/imageViewThirdNumberDate"
                app:layout_constraintTop_toTopOf="@+id/imageViewEndDate" />

            <TextView
                android:id="@+id/textViewExams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/rubik"
                android:text="@string/until_exam"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/imageViewThirdNumberDate"
                app:layout_constraintTop_toBottomOf="@+id/textViewDays" />


            <TextView
                android:id="@+id/textViewNumber1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="1"
                android:textColor="@color/lightblack"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewFirstNumberDate"
                app:layout_constraintEnd_toEndOf="@+id/imageViewFirstNumberDate"
                app:layout_constraintStart_toStartOf="@+id/imageViewFirstNumberDate"
                app:layout_constraintTop_toTopOf="@+id/imageViewFirstNumberDate" />

            <TextView
                android:id="@+id/textViewNumber2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="0"
                android:textColor="@color/lightblack"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewSecondNumberDate"
                app:layout_constraintEnd_toEndOf="@+id/imageViewSecondNumberDate"
                app:layout_constraintStart_toStartOf="@+id/imageViewSecondNumberDate"
                app:layout_constraintTop_toTopOf="@+id/imageViewSecondNumberDate" />

            <TextView
                android:id="@+id/textViewNumber3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="0"
                android:textColor="@color/lightblack"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewThirdNumberDate"
                app:layout_constraintEnd_toEndOf="@+id/imageViewThirdNumberDate"
                app:layout_constraintStart_toStartOf="@+id/imageViewThirdNumberDate"
                app:layout_constraintTop_toTopOf="@+id/imageViewThirdNumberDate" />


            <TextView
                android:id="@+id/textViewRecentlySearched"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/recently_searched"
                android:textColor="@color/lightblack"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewEndDate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/rubik"
                android:text="@string/map_button"
                android:textColor="@color/detailsMainScreen"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewEndDate" />

            <TextView
                android:id="@+id/textViewDepartments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/departments"
                android:textColor="@color/lightblack"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recentlySearchRecyclerView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/rubik"
                android:text="@string/list"
                android:textColor="@color/detailsMainScreen"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recentlySearchRecyclerView" />

            <TextView
                android:id="@+id/textViewWhatsUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/whats_up"
                android:textColor="@color/lightblack"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/departmentsRecyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recentlySearchRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewRecentlySearched" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/departmentsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewDepartments" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/whatsUpRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewWhatsUp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <data>

        <variable
            name="viewmodel"
            type="com.solvro.topwr.ui.fragments.home_page.HomeViewModel" />
    </data>
</layout>